@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2009-4-3
+GNU C Library NEWS -- history of user-visible changes.  2009-4-5
 Copyright (C) 1992-2008, 2009 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -36,6 +36,9 @@ Version 2.10
   Implemented by Ulrich Drepper.
 
 * New locale: nan_TW@latin
+
+* Faster strlen and strchr on x86-64.
+  Implemented by Ulrich Drepper.
 
 
 Version 2.9
